[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hsnu130319@gmail.com", email = "42515315+Joanne03@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
main = [
    "boto3>=1.22.7",
]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = { shell = "pytest -s tests" }